--- a/themes/drone/layouts/_default/single.html
+++ b/themes/drone/layouts/_default/single.html
@@ -7,14 +7,14 @@
 
 <aside>
 	<input type="checkbox" id="app-drawer"/>
-	<a href='{{ relLangURL "/" }}' class="logo"></a>
+	<a href='../index.html' class="logo"></a>
 	<label class="app-drawer" for="app-drawer"></label>
 	<div>
 		<nav>
-		{{ partial "menu_usage.html" . }}
+    {{ partial "menu_xyz.html" . }}
 		</nav>
 		{{ range .Site.Menus.index }}
-		<a href='{{ relLangURL .URL }}' class="section">
+		<a href='{{ relLangURL .URL }}/index.html' class="section">
 			{{ default .Name (i18n .Identifier) }}
 		</a>
 		{{ end }}
@@ -31,8 +31,6 @@
 	<article>
 		{{ .Content }}
 
-		{{ partial "next_steps.html" . }}
-		{{ partial "questions.html" . }}
 		{{ partial "page_meta.html" . }}
 	</article>
 	{{ partial "next_prev.html" . }}
