--- a/themes/drone/layouts/index.html
+++ b/themes/drone/layouts/index.html
@@ -7,11 +7,11 @@
 
 <aside>
 	<input type="checkbox" id="app-drawer"/>
-	<a href='{{ relLangURL "/" }}' class="logo"></a>
+	<a href='index.html' class="logo"></a>
 	<label class="app-drawer" for="app-drawer"></label>
 	<div>
 		{{ range .Site.Menus.index }}
-		<a href='{{ relLangURL .URL }}' class="section">
+		<a href='{{ relLangURL .URL }}/index.html' class="section">
 			{{ default .Name (i18n .Identifier) }}
 		</a>
 		{{ end }}
@@ -27,10 +27,7 @@
 	<h1>{{.Title}}</h1>
 	<article>
 	<p>
-		Welcome to the Drone documentation.
-	</p>
-	<p>
-		You can contribute to the documentation <a href='https://github.com/drone/docs'>here</a>.
+		Welcome to the Immanent documentation.
 	</p>
 	</article>
 </main>
